--- a/lambdas/kafka-subscriber/package.json
+++ b/lambdas/kafka-subscriber/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@middy/core": "^1.5.2",
-    "@middy/http-json-body-parser": "^1.5.2"
+    "@middy/http-json-body-parser": "^1.5.2",
+    "esbuild": "^0.14.21"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
