--- a/lambdas/kafka-subscriber/package.json
+++ b/lambdas/kafka-subscriber/package.json
@@ -4,6 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
+    "offline": "serverless offline -s dev",
+    "debug": "SLS_DEBUG=true sls offline -s dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
