add dazn lambda logger

--- a/search/package.json
+++ b/search/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.51.0",
+    "@dazn/lambda-powertools-logger": "^1.28.1",
     "@kafkajs/confluent-schema-registry": "^3.2.1",
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
