--- a/search/deploy/config/dev.yml
+++ b/search/deploy/config/dev.yml
@@ -8,7 +8,7 @@ custom:
 
 kafkaEvents:
   biochemical:
-    accessConfigurations: 
-      saslPlainAuth: ${self:custom.kafka.credentials.consumer}
-    bootstrapServers: ${self:custom.kafka.bootstrapServers}
-    topic: abcam.event.target.target.sit
+    accessConfigurations:   
+      saslPlainAuth: arn:aws:secretsmanager:eu-west-1:250098771573:secret:/manual/yeti/kafka/confluent-dev-GRHIgz
+    bootstrapServers: pkc-e8mp5.eu-west-1.aws.confluent.cloud:9092 
+    topic: abcam.event.target.biochemical.sit
